workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/public_parcelacontrato__x.object-meta.xml
<CustomObject>
    <description>public$parcelacontrato</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$parcelacontrato</externalName>
    <label>public$parcelacontrato</label>
    <pluralLabel>public$parcelacontrato</pluralLabel>
</CustomObject>