workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/Antecipacao_Comissao__c.field-meta.xml
<CustomField>
    <fullName>Antecipacao_Comissao__c</fullName>
    <externalDeveloperName>antecipacaocomissao</externalDeveloperName>
    <label>Antecipação Comissão</label>
    <length>10</length>
    <type>Text</type>
</CustomField>