workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/codigoparceiro__c.field-meta.xml
<CustomField>
    <fullName>codigoparceiro__c</fullName>
    <description>codigoparceiro</description>
    <externalDeveloperName>codigoparceiro</externalDeveloperName>
    <label>codigoparceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>