workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/dataatualizacao__c.field-meta.xml
<CustomField>
    <fullName>dataatualizacao__c</fullName>
    <description>dataatualizacao</description>
    <externalDeveloperName>dataatualizacao</externalDeveloperName>
    <label>dataatualizacao</label>
    <type>Date</type>
</CustomField>