workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/dataemissao__c.field-meta.xml
<CustomField>
    <fullName>dataemissao__c</fullName>
    <description>dataemissao</description>
    <externalDeveloperName>dataemissao</externalDeveloperName>
    <label>dataemissao</label>
    <type>Date</type>
</CustomField>