workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/datapagamentoparceiro__c.field-meta.xml
<CustomField>
    <fullName>datapagamentoparceiro__c</fullName>
    <description>datapagamentoparceiro</description>
    <externalDeveloperName>datapagamentoparceiro</externalDeveloperName>
    <label>datapagamentoparceiro</label>
    <type>Date</type>
</CustomField>