workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/datavencimento__c.field-meta.xml
<CustomField>
    <fullName>datavencimento__c</fullName>
    <description>datavencimento</description>
    <externalDeveloperName>datavencimento</externalDeveloperName>
    <label>datavencimento</label>
    <type>Date</type>
</CustomField>