workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/empresa__c.field-meta.xml
<CustomField>
    <fullName>empresa__c</fullName>
    <description>empresa</description>
    <externalDeveloperName>empresa</externalDeveloperName>
    <label>empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>