workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/endosso__c.field-meta.xml
<CustomField>
    <fullName>endosso__c</fullName>
    <description>endosso</description>
    <externalDeveloperName>endosso</externalDeveloperName>
    <label>endosso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>