workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/idexterno__c.field-meta.xml
<CustomField>
    <fullName>idexterno__c</fullName>
    <description>idexterno</description>
    <externalDeveloperName>idexterno</externalDeveloperName>
    <label>idexterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>