workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/idfatura__c.field-meta.xml
<CustomField>
    <fullName>idfatura__c</fullName>
    <description>idfatura</description>
    <externalDeveloperName>idfatura</externalDeveloperName>
    <label>idfatura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>