workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/idproposta__c.field-meta.xml
<CustomField>
    <fullName>idproposta__c</fullName>
    <description>idproposta</description>
    <externalDeveloperName>idproposta</externalDeveloperName>
    <label>idproposta</label>
    <length>255</length>
    <referenceTargetField>Contract.NumeroPropostaUnico__c</referenceTargetField>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>public$parcelacontrato</relationshipLabel>
    <relationshipName>public_parcelacontrato</relationshipName>
    <type>IndirectLookup</type>
</CustomField>