workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/numerofatura__c.field-meta.xml
<CustomField>
    <fullName>numerofatura__c</fullName>
    <description>numerofatura</description>
    <externalDeveloperName>numerofatura</externalDeveloperName>
    <label>numerofatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>