workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/numeropropostaporto__c.field-meta.xml
<CustomField>
    <fullName>numeropropostaporto__c</fullName>
    <description>numeropropostaporto</description>
    <externalDeveloperName>numeropropostaporto</externalDeveloperName>
    <label>numeropropostaporto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>