workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/origemproposta__c.field-meta.xml
<CustomField>
    <fullName>origemproposta__c</fullName>
    <description>origemproposta</description>
    <externalDeveloperName>origemproposta</externalDeveloperName>
    <label>origemproposta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>