workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/produto__c.field-meta.xml
<CustomField>
    <fullName>produto__c</fullName>
    <description>produto</description>
    <externalDeveloperName>produto</externalDeveloperName>
    <label>produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>