workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/quantidadevidacontrato__c.field-meta.xml
<CustomField>
    <fullName>quantidadevidacontrato__c</fullName>
    <description>quantidadevidacontrato</description>
    <externalDeveloperName>quantidadevidacontrato</externalDeveloperName>
    <label>quantidadevidacontrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>