workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/ramo__c.field-meta.xml
<CustomField>
    <fullName>ramo__c</fullName>
    <description>ramo</description>
    <externalDeveloperName>ramo</externalDeveloperName>
    <label>ramo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>