workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/responsavelfinanceiro__c.field-meta.xml
<CustomField>
    <fullName>responsavelfinanceiro__c</fullName>
    <description>responsavelfinanceiro</description>
    <externalDeveloperName>responsavelfinanceiro</externalDeveloperName>
    <label>responsavelfinanceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>