workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/seguradosalesforce__c.field-meta.xml
<CustomField>
    <fullName>seguradosalesforce__c</fullName>
    <description>seguradosalesforce</description>
    <externalDeveloperName>seguradosalesforce</externalDeveloperName>
    <label>seguradosalesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>