workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/tiporesponsavelpagamento__c.field-meta.xml
<CustomField>
    <fullName>tiporesponsavelpagamento__c</fullName>
    <description>tiporesponsavelpagamento</description>
    <externalDeveloperName>tiporesponsavelpagamento</externalDeveloperName>
    <label>tiporesponsavelpagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>