workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/titulo__c.field-meta.xml
<CustomField>
    <fullName>titulo__c</fullName>
    <description>titulo</description>
    <externalDeveloperName>titulo</externalDeveloperName>
    <label>titulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>