workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/valoriof__c.field-meta.xml
<CustomField>
    <fullName>valoriof__c</fullName>
    <description>valoriof</description>
    <externalDeveloperName>valoriof</externalDeveloperName>
    <label>valoriof</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>