workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/valorliquido__c.field-meta.xml
<CustomField>
    <fullName>valorliquido__c</fullName>
    <description>valorliquido</description>
    <externalDeveloperName>valorliquido</externalDeveloperName>
    <label>valorliquido</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>