workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/valorpago__c.field-meta.xml
<CustomField>
    <fullName>valorpago__c</fullName>
    <description>valorpago</description>
    <externalDeveloperName>valorpago</externalDeveloperName>
    <label>valorpago</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>