workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/valorparcela__c.field-meta.xml
<CustomField>
    <fullName>valorparcela__c</fullName>
    <description>valorparcela</description>
    <externalDeveloperName>valorparcela</externalDeveloperName>
    <label>valorparcela</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>