workspace-sf/force-app/main/default/objects/public_parcelacontrato__x/fields/vidasalesforce__c.field-meta.xml
<CustomField>
    <fullName>vidasalesforce__c</fullName>
    <description>vidasalesforce</description>
    <externalDeveloperName>vidasalesforce</externalDeveloperName>
    <label>vidasalesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>